@@ -1,3 +1,9 @@
+2009-08-30  H.J. Lu  <hongjiu.lu@intel.com>
+
+	* elf32-i386.c (elf_i386_finish_dynamic_symbol): Revert the
+	accidental checkin.
+	* elf64-x86-64.c (elf64_x86_64_finish_dynamic_symbol): Likwise.
+
 2009-08-30  Alan Modra  <amodra@bigpond.net.au>
 
 	PR ld/10569
